Bug 1279503 - part 1 - removed a non-used variable in BrowserConfiguration, r=gabor