dom/ipc/TabParent.h
@@ -653,8 +653,7 @@ protected:
   virtual bool RecvAudioChannelActivityNotification(const uint32_t& aAudioChannel,
                                                     const bool& aActive) override;
 
-  bool InitBrowserConfiguration(const nsCString& aURI,
-                                BrowserConfiguration& aConfiguration);
+  bool InitBrowserConfiguration(BrowserConfiguration& aConfiguration);
 
   ContentCacheInParent mContentCache;
 
